--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: auto;
+    margin: 0;
     flex-wrap: wrap;
 }
 
